src/main/Shared/Accordion/accordion.scss
@import '../../../assets/stylesheets/mixins/mixins';
.accordion-container{
    background-color:#fff;
    border:solid 1px #e2e2e2;
    border-radius:10px;
    display:block;
    @include box-shadow(3px, 3px, 5px, rgba(126, 126, 126, 0.3));
    margin-bottom:15px;
    .accordion-heading{
        outline:0;
        font-size:15px;
        padding:15px;
        position:relative;
        display:block;
        padding-right:35px;
        color:#333;
        text-decoration:none;
        white-space:nowrap;
        -webkit-user-select:none;
        -moz-user-select:none;
        -ms-user-select:none;
        user-select:none;
        background-color:transparent;
        border:0;
        width:100%;
        text-align:left;
        cursor:pointer;
        &:focus{
            outline:0;
        }
        &:after{
            font-family: 'FontAwesome';
            font-size:20px;
            position:absolute;
            content:'\f067';
            right:17px;
            top:12px;
        }
        &.open{
            border-bottom:solid 1px #e2e2e2;
            &:after{
                content:'\f068';
            }
        }
    }
    .accordion-content{
        padding:15px;
    }
}

